--- a/OrangeTutorial/www.OrangeTutorial.com/js.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/js.html
@@ -3,13 +3,20 @@
 
 <head>
     <title>Orange JS Tutorial</title>
-    <link rel="stylesheet" type="text/css" href="styles/html.css">
+    <link rel="stylesheet" type="text/css" href="css/html.css">
     <meta charset="utf-8"/>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/js.js"></script>
 </head>
 
 <body background="images/background.jpg">
+
+  <div class="navbar">
+      <a href="index.html">HOME</a>
+      <a href="js.html">JavaScript</a>
+      <a href="css.html">CSS</a>
+      <a href="html.html">HTML</a>
+  </div>
 
 <div class="nav">
     <a class="a active" href="#">Home</a>
