--- a/OrangeTutorial/www.OrangeTutorial.com/html.html
+++ b/OrangeTutorial/www.OrangeTutorial.com/html.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Orange HTML Tutorial</title>
-    <link rel="stylesheet" type="text/css" href="styles/html.css">
+    <link rel="stylesheet" type="text/css" href="css/html.css">
     <script src="js/jquery-3.3.1.js"></script>
     <script>
 	$(document).ready(function(){
@@ -61,6 +61,12 @@
 </head>
 
 <body background="images/background.jpg">
+  <div class="navbar" class="logo">
+      <a href="index.html">HOME</a>
+      <a href="js.html">JavaScript</a>
+      <a href="css.html">CSS</a>
+      <a href="html.html">HTML</a>
+  </div>
 
 <div class="nav">
     <a class="a active" href="#">Home</a>
@@ -147,28 +153,4 @@
 
 </body>
 
-<footer>
-    <div class="footer">
-    	<a href="index.html">
-    	<img src="images/orange.png" class="logo">
-        <div id="try">
-	        <p>OrangeTutorials&copy; 2018-19</p>
-	        <p>OrangeTutorial@slu.edu.ph</p>
-	        <p>Baguio City, Philippines</p>
-	        <p>0985496325</p>
-        <a href="https://mail.google.com">
-            <img src="images/gm.png" height="35" width="35" alt="gm logo"/>
-        </a>
-        <a href="https://www.facebook.com">
-            <img src="images/fb.png" height="35" width="35" alt="fb logo"/>
-        </a>
-        <a href="https://www.instagram.com">
-            <img src="images/ig.png" height="35" width="35" alt="ig logo"/>
-        </a>
-        <a href="https://www.pinterest.ph">
-            <img src="images/pin.png" height="35" width="35" alt="pinterest logo"/>
-        </a>
-        </div>
-    </div>
-</footer>
 </html>
