--- a/www.OrangeTutorial.com/html.html
+++ b/www.OrangeTutorial.com/html.html
@@ -63,7 +63,7 @@
     </script>
 </head>
 
-<body background="images/background.jpg">
+<body background="images/html-background.jpg">
 
 <div class="nav">
     <a class="a active" href="#">Home</a>
