--- a/www.OrangeTutorial.com/js.html
+++ b/www.OrangeTutorial.com/js.html
@@ -26,8 +26,9 @@
     <a class="f" href="#creating-array-object">Objects: Creating an Array Objects</a>
 </div>
 
-<div class="topic" id="js">
-	<h1>JS: JavaScript</h1>
+<div class="content">
+    <div class="home">
+	<h1>JS Tutorial</h1>
 	<p>
 		NOTE: If you are going to write JavaScript (JS) as an external source, always write the following:
 	</p>
@@ -188,6 +189,7 @@
 		<pre>button-colors[3] = "green";</pre>
 		<img src="images/1-Down_Mushroom_NSMBDIY.png"/>
 	</section>
-	</div>
+    </div>
+</div>
 </body>
 </html>
