--- a/www.OrangeTutorial.com/js.html
+++ b/www.OrangeTutorial.com/js.html
@@ -81,6 +81,7 @@
 
 <div class="content">
     <div class="home">
+	<!--The contents in JS Tutorial are made by SAN JUAN, JAN PAULA S.-->
 	<h1>JS Tutorial</h1>
 	<p>
 		NOTE: If you are going to write JavaScript (JS) as an external source, always write the following:
